# fastg3

./: .gitignore  AUTHORS  LICENSE  MANIFEST.in  README.md  publishing.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
benchmarks/: convert2png.py  datasets_stats.py  gen_graphs.py  plot_theme.py  quick_testing.py  requirements.txt
benchmarks/crisp/: constants.py  init.py  nants.py  nattrs.py  nrows.py  nsamples.py  run_all_benchmarks.sh  sample_size.py  sql_utils.py  vsyn.py
benchmarks/ncrisp/: constants.py  init.py  nrows.py  nsamples.py  run_all_benchmarks.sh  sample_size.py  vpe.py
benchmarks/utils/: bench_utils.py  dataset_utils.py  diamonds_params.py  generate_syn.py  hydro_params.py  number_utils.py  plot_utils.py
benchmarks/vpe/: run_all_benchmarks.sh
examples/: A_crispg3.py  B_vpe_ex0.py  B_vpe_ex1.py  C_ncrispg3.py  D_sublinear.py  rtoy_example.py
fastg3/crisp/: ArrayKey.h  __init__.pyx  c_ArrayKey.pxd  cg3_hash.pyx  cg3_sort.pyx  cg3_srs.pyx  cvpe.pyx  g3_global.py
fastg3/ncrisp/: NeighborsInfos.h  Onak2011.pyx  RSolver.pyx  SubGIC.pyx  SubGICold.pyx  SubGICold.txt  VPE.pxd  VPE.pyx  VPEGraph.pxd  VPEGraph.pyx  Yoshida2009.pyx  __init__.pyx  c_Dataframe.pxd  pair_hash.h  vpe_proxy.py
fastg3/ncrisp/cpp/: Dataframe.h  NumAttribute.h  NumDistance.h  StrAttribute.h  StrDistance.h
fastg3/ncrisp/libs/: mvmatching  wgyc
fastg3/ncrisp/libs/LibMVC/: numvc.hpp
fastg3/ncrisp/sublinear_mvc/: MVC.py  VpeGraph.py  YoshidaSubMVC.py  osmvc.py
publishing/: Dockerfile  publishing.sh
