[metadata]
name = fastg3-datavalor
version = 0.0.1
author = Pierre Faure--Giovagnoli
author_email = pierre.faure--giovagnoli@liris.insa-lyon.fr
description = A package for computing the g3 indicator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datavalor/fastg3
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Typing :: Typed
    Operating System :: Unix

[build_ext]
inplace = True